# flake_detector

./: A2_O7_5x_Unprocessed White Light.tif  LICENCE  LICENSE  example_detection.py  fast_hdbscan_cached-0.1.3-py3-none-any.whl  pyproject.toml  readme.md  requirements.txt
flake_detector/: __init__.py  generic_flake_detection.py
